@@ -1,5 +1,11 @@
 2009-08-02  kitone  <kitone@gna.org>
 
+	* src/we/waveformrenderer.cc:
+	* src/we/waveformrenderer.h:
+	Add keyframes support to the waveform renderer.
+
+2009-08-02  kitone  <kitone@gna.org>
+
 	* src/player.h:
 	* src/vp/gstreamerplayer.cc:
 	* src/vp/gstreamerplayer.h:
